--- a/Component/Orderhistory.html
+++ b/Component/Orderhistory.html
@@ -12,21 +12,17 @@
   <link rel="stylesheet" href="../assets/Css/style.css" />
   <link rel="stylesheet" href="../assets/Css/mediaquery.css">
 
-  <!-- Owl Carousel CSS -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
-
 </head>
 
 <body>
   <section id="Checkout ">
-    <div class="containers m-md-5">
-      <div class="row ">
+    <div class="containers m-md-5 ">
+      <div class="row  ">
 
         <!-- Checkout -->
-        <div class="col-md-6 p-0">
-          <div class="card p-3" style="            background-color: #fff;
-          border-radius: 10px;            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);      
+        <div class="col-md-6 ml-2 mr-2 ml-md-0 mr-md-0 ">
+          <div class="card p-3" style="background-color: #fff;
+          border-radius: 10px;box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);      
           ">
             <div class="mobile h2 text-center">
               <img src="https://altcheeni.com/wp-content/uploads/2022/01/Mainlogo2.png" class="logo-image"
@@ -166,7 +162,7 @@
                     placeholder="Add any additional notes or comments here"></textarea>
                 </div>
                 <div class="add">
-                  <button class="custom-btn w-100 font-weight-bold"> Add Address</button>
+                  <button class="custom-btn1 w-100 font-weight-bold"> Add Address</button>
                 </div>
 
 
@@ -179,17 +175,12 @@
           </div>
 
         </div>
-
-
         <!-- Checkout -->
-
-
-
         <div class="col-md-6 order-md-1 order-first ">
           <div class="card d-md-none">
             <div class="row">
               <div class="col-8">
-                <button class="custom-btn dropdown-toggle w-100 " style="border:none" type="button"
+                <button class="custom-btn1 dropdown-toggle w-100 " style="border:none" type="button"
                   data-toggle="collapse" data-target="#productCollapse">
                   <i class="fas fa-cart-plus "></i>
                   Show order Summary
@@ -202,9 +193,7 @@
           </div>
           <div class="collapse d-md-block" id="productCollapse">
 
-            <div class="card p-4" style="            background-color: #fff;
-            border-radius: 10px;            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);      
-            ">
+            <div class="card p-4  " style="background-color: #fff;border-radius: 10px; box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);">
             <div class="single">
               <div class="card p-3">
                 <i>
@@ -274,9 +263,7 @@
                 </div>
               </div>
             </div>
-            <div class="card p-2" style="            background-color: #fff;
-              border-radius: 10px;            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);      
-              ">
+            <div class="card  ml-1 mr-5 ml-md-0 mr-md-0" style=" background-color: #fff;border-radius: 10px;box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);">
               <h3 class="card text-center p-2">Summary</h2>
                 <div class="d-flex justify-content-between">
                   <p class="mb-2">Total price:</p>
@@ -301,7 +288,7 @@
                     data-target="#couponModal" />
                 </div>
                 <div class="box-1">
-                  <a href="../Component/Reciept.html" style="color: black;"><button class="font-weight-bold custom-btn w-100">PROCEED</span></button></a>
+                  <a href="#" style="color: black;"><button class="font-weight-bold custom-btn1 w-100">PROCEED</span></button></a>
                 </div>
 
             </div>
@@ -366,7 +353,7 @@
               </div>
             </div>
             <div class="APPLYBTN">
-              <button class="custom-btn w-100"
+              <button class="custom-btn1 w-100"
                 style="border-top: none;border-bottom: none; outline: none;">APPLY</button>
             </div>
           </div>
@@ -792,15 +779,11 @@
   
     </div>
   </section>
+
   <!-- Bootstrap JS and jQuery -->
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-
-  <!-- Owl Carousel JS -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"></script>
-  <script src="../assets/js/Script.js"></script>
   
 </body>
 
