--- a/Component/Shop.html
+++ b/Component/Shop.html
@@ -21,107 +21,89 @@
 
 <body>
   
-  <section class="ftco-section  sticky-nav mb-3">
-    <div class="header-notice pt-3 ">
-      <div class="container">
+  <section class="ftco-section mb-2 " id="Header">
+    <div class="Notice" style=" background-color: white;">
+      <div class="container mt-3">
 
-      <div class="row ">
-        <div class="col-md-6 d-md-inline d-none">
-          <p class="">Free shipping on all orders above ₹ 599/-</p>
-        </div>
-        <div class="col-md-6 float-right d-md-inline d-none ">
-          <div class="row d-flex justify-content-center">
-          <div class="col-2">
-          <a href="" class="mr-4" data-toggle="modal" data-target="#exampleModalCenter" href="#" id="dropdown04"
-            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <i class="far fa-user" style="color:  #3f3e3e;"></i>
-          </a>
-        </div>
-        <div class="col-2">
-
-          <a href="../Component/Wishlist.html" class=" ">
-            <i class="far fa-heart" style="color: #3f3e3e;"></i>
-          </a>
+        <div class="row ">
+          <div class="col-md-6 col-12 text-center">
+            <p class="">Free shipping on all orders above ₹ 599/-</p>
           </div>
-          <div class="col-3">
-
-          <span class="cart-number">8</span>
-          <a href="../Component/Cart.html" class="">
-
-            <i class="	fas fa-shopping-cart" style="color: #9c9c9c;"></i> </a>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-
-        <div class="col-12">
-          <form role="search" method="get" class="search-form  d-md-none w-100" action="">
-            <div class="form-group has-search">
-              <span class="fa fa-search form-control-feedback"></span>
-              <input type="text" class="form-control " placeholder="Search">
-            </div>
-          </form>
-
-        </div>
-      </div>
-    </div>
-  </div>
-    <div class="Header " style="   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2)">
-      <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar ftco-navbar-light  " id="ftco-navbar">
-
-        <div class="container" >
-          <div class="row " style="height: 60px;"> <!-- Added a new div for logo and search and toggle -->
-            <div class="col-1">
-                <a class="navbar-brand" href="index.html">
-                    <img src="https://altcheeni.com/wp-content/uploads/2022/01/Mainlogo2.png" class="logo-image" alt="Altcheeni" style="height: 60px;"/>
+          <div class="col-md-6 float-right d-md-inline d-none ">
+            <div class="row d-flex justify-content-center">
+              <div class="col-2">
+                <a href="" class="mr-4" data-toggle="modal" data-target="#loginModal" href="#" id="dropdown04"
+                  data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  <i class="far fa-user" style="color:  #3f3e3e;"></i>
                 </a>
-            </div>
-            <div class="col-10 mt-4  text-right  d-md-none"> <!-- Changed "float-right" to "text-right" -->
-                <a href="" class="p-3 " data-toggle="modal" data-target="#exampleModalCenter" id="dropdown04">
-                    <i class="far fa-user" style="color:  #3f3e3e;"></i>
+              </div>
+              <div class="col-2">
+
+                <a href="../Component/Wishlist.html" class=" ">
+                  <i class="far fa-heart" style="color: #3f3e3e;"></i>
                 </a>
-                <a href="../Component/Wishlist.html" class="">
-                    <i class="far fa-heart" style="color: #3f3e3e;"></i>
-                </a>
+              </div>
+              <div class="col-3">
+
                 <span class="cart-number">8</span>
                 <a href="../Component/Cart.html" class="">
-                    <i class="fas fa-shopping-cart" style="color: #9c9c9c;"></i>
-                </a>
-            </div>
-        </div>
-        
 
-          <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#ftco-nav"
-          aria-controls="ftco-nav" aria-expanded="true" aria-label="Toggle navigation">
-          <i class="fas fa-bars"></i>
-        </button>
+                  <i class="	fas fa-shopping-cart" style="color: #9c9c9c;"></i> </a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        </div>
+      </div>
+    <div class="Header " style=" background-color: white;  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2)">
+      <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar ftco-navbar-light pt-md-3" id="ftco-navbar">
+
+        <div class="container">
+          <div class="row " style="height: 60px;"> <!-- Added a new div for logo and search and toggle -->
+            <div class="col-1">
+              <a class="navbar-brand" href="../index.html">
+                <img src="https://altcheeni.com/wp-content/uploads/2022/01/Mainlogo2.png" class="logo-image"
+                  alt="Altcheeni" style="height: 50px;" />
+              </a>
+            </div>
+            <div class="col-10 mt-4  text-right  d-md-none"> <!-- Changed "float-right" to "text-right" -->
+              <a href="" class="p-4 " data-toggle="modal" data-target="#loginModal" id="dropdown04">
+                <i class="far fa-user" style="color:  #3f3e3e;"></i>
+              </a>
+              <a href="../Component/Wishlist.html" class="">
+                <i class="far fa-heart" style="color: #3f3e3e;"></i>
+              </a>
+              <span class="cart-number">8</span>
+              <a href="../Component/Cart.html" class="">
+                <i class="fas fa-shopping-cart" style="color: #9c9c9c;"></i>
+              </a>
+            </div>
+          </div>
+
+
+          <button class="navbar-toggler mt-3 " type="button" data-toggle="collapse" data-target="#ftco-nav"
+            aria-controls="ftco-nav" aria-expanded="true" aria-label="Toggle navigation">
+            <i class="fas fa-bars"></i>
+          </button>
 
           <div class="collapse navbar-collapse mt-4 mt-md-0" id="ftco-nav">
             <ul class="navbar-nav m-auto">
               <li class="nav-item active">
-                <a href="#" class="nav-link">Home</a>
+                <a href="../index.html" class="nav-link">Home</a>
               </li>
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" data-toggle="modal" data-target="#searchModal" href="#"
+                <a class="nav-link dropdown-toggle" data-toggle="modal" data-target="#categoryModal" href="#"
                   id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
                   style="color: rgba(0, 0, 0, 0.7) !important;">Category</a>
-
-
-
               </li>
 
               <li class="nav-item"><a href="../Component/About.html" class="nav-link">About Us</a></li>
               <li class="nav-item"><a href="../Component/Shop.html" class="nav-link">Shop</a></li>
               <li class="nav-item"><a href="../Component/Contact.html" class="nav-link">Contact</a></li>
               <li class="nav-item">
-                <form role="search" method="get" class="search-form mt-3 d-md-none" action="">
-                  <div class="form-group has-search">
-                    <span class="fa fa-search form-control-feedback"></span>
-                    <input type="text" class="form-control" placeholder="Search">
-                  </div>
-                </form>
-      
+                
+
 
               </li>
 
@@ -141,15 +123,24 @@
 
 
       </nav>
+        <div class="col-12 pl-3 pr-3  pb-1">
+          <form role="search" method="get" class="search-form  d-md-none w-100" action="">
+            <div class="form-group has-search">
+              <span class="fa fa-search form-control-feedback"></span>
+              <input type="text" class="form-control " placeholder="Search">
+            </div>
+          </form>
+
+        </div>
     </div>
 
 
 
 
-    <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog"
+    <div class="modal fade" id="loginModal" tabindex="-1" role="dialog"
       aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-      <div class="modal-dialog modal-dialog-centered modal-lg mt-5 mb-md-0 " role="document">
-        <div class="modal-content">
+      <div class="modal-dialog  mt-5 mr-4 login-rectangle-modal modal-lg" role="document" style="margin-right:% !important;      ">
+        <div class="modal-content d-flex justify-content-center ">
           <div class="modal-header p-0 ">
             <button type="button" class="custom-close-btn" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">&times;</span>
@@ -260,53 +251,53 @@
       </div>
     </div>
 
-    <div class="modal fade" id="searchModal" tabindex="-1" role="dialog" aria-labelledby="searchModalLabel"
+    <div class="modal fade" id="categoryModal" tabindex="-1" role="dialog" aria-labelledby="searchModalLabel"
       aria-hidden="true">
-      <div class="modal-dialog modal-dialog-centered " role="document">
-        <div class="modal-content">
-          <div class="containers p-3" style="background-color: white;">
+      <div class="modal-dialog category-rectangle-modal" role="document" >
+        <div class="modal-content" >
+          <div class="containers p-3" style="background-color: white;border-radius: 50px !important;" >
             <div class="card">
-              <h3 class="text-center p-3 font-weight-bold"><i>Browse Categories</i></h3>
+              <h3 class="text-center p-3 homeTitle"><i>Browse Categories</i></h3>
             </div>
-            
+
             <div class="row p-3">
-              <div class="col-md-2 col-4 p-0 m-0">
+              <div class="col-md-2 col-3 p-0 m-0">
                 <button class="FilterBtn active w-100" data-filter="*">All Products</button>
               </div>
-              <div class="col-md-2 col-4 p-0 m-0">
+              <div class="col-md-2 col-3 p-0 m-0">
                 <button class="FilterBtn w-100" data-filter=".ketchup">Ketchup & Sauces</button>
               </div>
-              <div class="col-md-2 col-4 p-0 m-0">
+              <div class="col-md-2 col-3 p-0 m-0">
                 <button class="FilterBtn w-100" data-filter=".sweets">Sweets</button>
               </div>
-              <div class="col-md-2 col-4 p-0 p-0 m-0">
+              <div class="col-md-2 col-3 p-0 p-0 m-0">
                 <button class="FilterBtn w-100" data-filter=".cookies">Cookies</button>
               </div>
-              <div class="col-md-2 col-4 p-0 m-0">
+              <div class="col-md-2 col-3 p-0 m-0">
                 <button class="FilterBtn w-100" data-filter=".chocolates">Chocolates</button>
               </div>
-              <div class="col-md-2 col-4 p-0 m-0">
+              <div class="col-md-2 col-3 p-0 m-0">
                 <button class="FilterBtn w-100" data-filter=".sweeteners">Sweeteners</button>
               </div>
-              <div class="col-md-2 col-4 p-0 m-0">
+              <div class="col-md-2 col-3 p-0 m-0">
                 <button class="FilterBtn w-100" data-filter=".chawanprash">Chawanprash</button>
               </div>
-              <div class="col-md-2 col-4 p-0 m-0">
+              <div class="col-md-2 col-3 p-0 m-0">
                 <button class="FilterBtn w-100" data-filter=".chewing-gums">Chewing Gums</button>
               </div>
-              <div class="col-md-2 col-4 p-0 m-0">
+              <div class="col-md-2 col-3 p-0 m-0">
                 <button class="FilterBtn w-100" data-filter=".snacks">Snacks</button>
               </div>
-              <div class="col-md-2 col-4 p-0 m-0">
+              <div class="col-md-2 col-3 p-0 m-0">
                 <button class="FilterBtn w-100" data-filter=".vinegar">Vinegar</button>
               </div>
-              <div class="col-md-2 col-4 p-0 m-0">
+              <div class="col-md-2 col-3 p-0 m-0">
                 <button class="FilterBtn w-100" data-filter=".diabetic-care-atta">Diabetic Care Atta</button>
               </div>
-              <div class="col-md-2 col-4 p-0 m-0 ">
+              <div class="col-md-2 col-3 p-0 m-0 ">
                 <button class="FilterBtn w-100" data-filter=".jams-spreads">Jams & Spreads</button>
               </div>
-              <div class="col-md-2 col-4 p-0 m-0">
+              <div class="col-md-2 col-3 p-0 m-0">
                 <button class="FilterBtn w-100" data-filter=".juices-syrups">Juices & Syrups</button>
               </div>
             </div>
@@ -317,11 +308,9 @@
 
 
   </section>
-  
-<div class="breadcrumb" style="background-color: #fff;
-border-radius: 10px;            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);      
-">
 
+  
+<div class="breadcrumb card p-0 mb-3" style="background-color: #fff;border-radius: 10px;">
   <div class="row">
     <div class="breadcrumb col-12 pl-5" style="background-color: #fff;;">
       <a href="../index.html" class="breadcrumb-item text-decoration">Home</a>
