--- a/assets/Css/mediaquery.css
+++ b/assets/Css/mediaquery.css
@@ -1,30 +1,46 @@
 /* NAV BAR STYLE */
 
-@media (max-width: 575.98px) {
+@media (max-width: 875.98px) {
 
   .owl-carousel .item {
-    width: 50%;
+    height: 200px !important;
+    width:90% !important;
+    margin: 20px !important;
   }
-  .owl-carousel .item h4 {
-    font-size: 15px !important;
-  }
+  .owl-carousel .item img {
+    margin-bottom: 20px !important;
+    width: 100px !important;
 
+  }
+  #CompanyLogo .owl-carousel .item {
+    margin: 20px !important;
+    width:90% !important;
+  }
+  
+  #CompanyLogo .owl-carousel .item img {
+    height: 190px !important;
+  }
 }
 
 
 @media (max-width: 800px) {
+
+  /* HOMEPAGE */
+
   .imagebanner img{
     height: 250px !important;
   }
+  
   .contact__wrapper {
     position: relative;
     top: -50px !important;
     /* Adjust this value as needed */
     z-index: 1;
   
-  
-  
     /* To ensure the form is on top of the image */
+  }
+  .nav-pills .nav-link{
+    font-size: 10px;
   }
   
 
@@ -44,13 +60,7 @@
   width: 300px;
 
 }
-  .ftco-navbar-light {
-    background: #faf9f9 !important;
-    position: relative;
-    top: 0;
-    padding: 50x 50px;
-    height: auto;
-  }
+  
   .logo-image{
     width: 120px;
   }
@@ -111,10 +121,20 @@
     font-size: 12px;
     padding-left: 2%;
     padding-right: 0%;
-  
- 
+    border-radius: 10%;
   }
   
+  .custom-btn1 {
+    font-size: 12px;
+    padding-left: 2%;
+    padding-right: 0%;
+  }
+  .custom-btn1:hover {
+    color: #f58634;
+    border-color: #f58634;
+     border-bottom: 3px solid transparent !important;
+    border-top: 3px solid transparent !important;
+  }
 
 }
 
