--- a/Component/About.html
+++ b/Component/About.html
@@ -51,20 +51,20 @@
           </div>
         </div>
 
+        </div>
       </div>
-    </div>
     <div class="Header " style=" background-color: white;  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2)">
       <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar ftco-navbar-light pt-md-3" id="ftco-navbar">
 
         <div class="container">
           <div class="row " style="height: 60px;"> <!-- Added a new div for logo and search and toggle -->
-            <div class="col-1">
+            <div class="col-2">
               <a class="navbar-brand" href="../index.html">
                 <img src="https://altcheeni.com/wp-content/uploads/2022/01/Mainlogo2.png" class="logo-image"
                   alt="Altcheeni" style="height: 50px;" />
               </a>
             </div>
-            <div class="col-10 mt-4  text-right  d-md-none"> <!-- Changed "float-right" to "text-right" -->
+            <div class="col-10 mt-4  text-right  d-md-none" style="width: 115px"> <!-- Changed "float-right" to "text-right" -->
               <a href="" class="p-4 " data-toggle="modal" data-target="#loginModal" id="dropdown04">
                 <i class="far fa-user" style="color:  #3f3e3e;"></i>
               </a>
@@ -87,7 +87,7 @@
           <div class="collapse navbar-collapse mt-4 mt-md-0" id="ftco-nav">
             <ul class="navbar-nav m-auto">
               <li class="nav-item active">
-                <a href="../index.html" class="nav-link">Home</a>
+                <a href="#" class="nav-link">Home</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" data-toggle="modal" data-target="#categoryModal" href="#"
@@ -99,7 +99,7 @@
               <li class="nav-item"><a href="../Component/Shop.html" class="nav-link">Shop</a></li>
               <li class="nav-item"><a href="../Component/Contact.html" class="nav-link">Contact</a></li>
               <li class="nav-item">
-
+                
 
 
               </li>
@@ -120,24 +120,23 @@
 
 
       </nav>
-      <div class="col-12 pl-3 pr-3  pb-1">
-        <form role="search" method="get" class="search-form  d-md-none w-100" action="">
-          <div class="form-group has-search">
-            <span class="fa fa-search form-control-feedback"></span>
-            <input type="text" class="form-control " placeholder="Search">
-          </div>
-        </form>
+        <div class="col-12 pl-3 pr-3  pb-1">
+          <form role="search" method="get" class="search-form  d-md-none w-100" action="">
+            <div class="form-group has-search">
+              <span class="fa fa-search form-control-feedback"></span>
+              <input type="text" class="form-control " placeholder="Search">
+            </div>
+          </form>
 
-      </div>
+        </div>
     </div>
 
 
 
 
-    <div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
-      aria-hidden="true">
-      <div class="modal-dialog  mt-5 mr-4 login-rectangle-modal modal-lg" role="document"
-        style="margin-right:% !important;      ">
+    <div class="modal fade" id="loginModal" tabindex="-1" role="dialog"
+      aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+      <div class="modal-dialog  mt-5 mr-4 login-rectangle-modal modal-lg" role="document" style="margin-right:% !important;      ">
         <div class="modal-content d-flex justify-content-center ">
           <div class="modal-header p-0 ">
             <button type="button" class="custom-close-btn" data-dismiss="modal" aria-label="Close">
@@ -251,9 +250,9 @@
 
     <div class="modal fade" id="categoryModal" tabindex="-1" role="dialog" aria-labelledby="searchModalLabel"
       aria-hidden="true">
-      <div class="modal-dialog category-rectangle-modal" role="document">
-        <div class="modal-content">
-          <div class="containers p-3" style="background-color: white;border-radius: 50px !important;">
+      <div class="modal-dialog category-rectangle-modal" role="document" >
+        <div class="modal-content" >
+          <div class="containers p-3" style="background-color: white;border-radius: 50px !important;" >
             <div class="card">
               <h3 class="text-center p-3 homeTitle"><i>Browse Categories</i></h3>
             </div>
