--- a/Component/Cart.html
+++ b/Component/Cart.html
@@ -58,13 +58,13 @@
 
         <div class="container">
           <div class="row " style="height: 60px;"> <!-- Added a new div for logo and search and toggle -->
-            <div class="col-1">
+            <div class="col-2">
               <a class="navbar-brand" href="../index.html">
                 <img src="https://altcheeni.com/wp-content/uploads/2022/01/Mainlogo2.png" class="logo-image"
                   alt="Altcheeni" style="height: 50px;" />
               </a>
             </div>
-            <div class="col-10 mt-4  text-right  d-md-none"> <!-- Changed "float-right" to "text-right" -->
+            <div class="col-10 mt-4  text-right  d-md-none" style="width: 115px"> <!-- Changed "float-right" to "text-right" -->
               <a href="" class="p-4 " data-toggle="modal" data-target="#loginModal" id="dropdown04">
                 <i class="far fa-user" style="color:  #3f3e3e;"></i>
               </a>
@@ -87,7 +87,7 @@
           <div class="collapse navbar-collapse mt-4 mt-md-0" id="ftco-nav">
             <ul class="navbar-nav m-auto">
               <li class="nav-item active">
-                <a href="../index.html" class="nav-link">Home</a>
+                <a href="#" class="nav-link">Home</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" data-toggle="modal" data-target="#categoryModal" href="#"
@@ -311,7 +311,7 @@
       <div class="breadcrumb col-12 pl-5" style="background-color: #fff;;">
         <a href="../index.html" class="breadcrumb-item text-decoration">Home</a>
     
-        <span class="breadcrumb-item active text-decoration">Shop</span>
+        <span class="breadcrumb-item active text-decoration">Cart</span>
       </div>
     </div>
   </div>
@@ -327,10 +327,11 @@
           </div>
         </div>
 
-          <div class="row  pb-3  pr-3 pr-md-3">
-            <div class="col pl-2 pl-md-3 "><img class="img-fluid" style="width: 5.0rem;" src="../assets/img/LoginLogo.jpeg">
+          <div class="row  pb-3  pr-3  ">
+            <div class="col-3 mt-md-0   ">
+              <img class="img-fluid ml-md-4" style=" width: 90px;" src="../assets/img/LoginLogo.jpeg">
             </div>
-            <div class="col">
+            <div class="col-5">
               <div class="row text-muted text-wrap-ellipsis">
                 <a href="#" style="color:rgb(39, 39, 39);text-decoration:none;">
                   <h6 class="card-title font-weight-bold text-wrap-ellipsis">
@@ -342,27 +343,28 @@
               </div>
               <div class="row">100gm</div>
             </div>
-            <div class="col-3  pl-2 pr-0 pl-md-4 pr-md-4 ">
+            <div class="col-3  pl-0 pr-0 pl-md-4 pr-md-4 ">
               <form action="#" class="display-flex">
                 <button class="qtyminus w-50 p-1" style="height:35px;border-radius: 5px; outline: none; background-color:#f7f7f7; color: rgb(0, 0, 0);" >-</button>
                 <input type="text" name="quantity" value="1" class="qty w-50 h-50 text-center mt-2"
                   style="border: none; outline: none;">
                   <button class="qtyminus w-50 p-1" style="height:35px;border-radius: 5px; outline: none; background-color:#ffffff; color: rgb(0, 0, 0);" >+</button>
-                </form>
-             </div>
-            <div class="col-3 ">
+                </form>                
+            <div class=" mt-3  ">
               <b>&#8377;</b> 44.00
             </div>
-            <div class="col-1">
+             </div>
+            <div class="col p-0 ml-3 ml-md-0 ">
                 <button class="close-button p-2 p-md-3">
                 </button>
             
             </div>
           </div>
-          <div class="row  pb-3  pr-3 pr-md-3">
-            <div class="col pl-2 pl-md-3 "><img class="img-fluid" style="width: 5.0rem;" src="../assets/img/LoginLogo.jpeg">
+          <div class="row  pb-3  pr-3  ">
+            <div class="col-3 mt-md-0   ">
+              <img class="img-fluid ml-md-4" style=" width: 90px;" src="../assets/img/LoginLogo.jpeg">
             </div>
-            <div class="col">
+            <div class="col-5">
               <div class="row text-muted text-wrap-ellipsis">
                 <a href="#" style="color:rgb(39, 39, 39);text-decoration:none;">
                   <h6 class="card-title font-weight-bold text-wrap-ellipsis">
@@ -374,23 +376,22 @@
               </div>
               <div class="row">100gm</div>
             </div>
-            <div class="col-3  pl-2 pr-0 pl-md-4 pr-md-4 ">
+            <div class="col-3  pl-0 pr-0 pl-md-4 pr-md-4 ">
               <form action="#" class="display-flex">
                 <button class="qtyminus w-50 p-1" style="height:35px;border-radius: 5px; outline: none; background-color:#f7f7f7; color: rgb(0, 0, 0);" >-</button>
                 <input type="text" name="quantity" value="1" class="qty w-50 h-50 text-center mt-2"
                   style="border: none; outline: none;">
                   <button class="qtyminus w-50 p-1" style="height:35px;border-radius: 5px; outline: none; background-color:#ffffff; color: rgb(0, 0, 0);" >+</button>
-                </form>
-              
+                </form>                
+            <div class=" mt-3  ">
+              <b>&#8377;</b> 44.00
             </div>
-            <div class="col-3 ">
-              <b>&#8377;  </b> 44.00
+             </div>
+            <div class="col p-0 ml-3 ml-md-0 ">
+                <button class="close-button p-2 p-md-3">
+                </button>
+            
             </div>
-            <div class="col-1">
-              <button class="close-button p-2 p-md-3">
-              </button>
-          
-          </div>
           </div>
       </div>
 
